# budget-bo

./: .env.example  .gitignore  README.md  cookies.txt  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  CONSOLE.md  Dockerfile  Dockerfile.prod  alembic.ini  celerybeat-schedule  console.py  manage.py  mcp_server.py  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 2026_03_06_0742-ed14aa0d33e2_add_bank_website_to_credentials.py  2026_03_06_0743-7a0f9bfed3ee_description.py  2026_03_06_1630-add_bank_accounts_table.py  2026_03_08_1200-add_enrichment_rules_table.py  2026_03_08_1500-add_new_transactioncategory_values.py  2026_03_08_1700-add_drinking_transactioncategory.py  2026_03_11_1300_add_recurring_fk.py  2026_03_14_1000-initial_migration.py
backend/app/: __init__.py  main.py
backend/app/api/: accounts.py  auth.py  credentials.py  health.py  recurring.py  transactions.py  users.py
backend/app/core/: config.py  database.py  rate_limit.py  security.py  validation.py
backend/app/domain/: __init__.py  (+1 more)
backend/config/: authentication.py  urls.py
backend/domain/: recurrence.py
backend/scripts/: console.py  download_cragr.sh  download_woob_modules.py  enrich_transactions.py  install_woob_cragr.sh  seed.py  setup_woob.py
backend/services/: ai_constants.py  enrichment_intelligence.py  enrichment_memory.py  gemini_enrichment.py  gemini_prompts.py  ollama.py  ollama_prompts.py  security.py
backend/tests/: test_enrichment_pipeline.py
backend/worker/: __init__.py  celery_app.py  rq_jobs.py  rq_queue.py  rq_scheduler.py  rq_worker.py
(+144 files in other folders)
